fix: Set overlap to row 1, column 1

--- a/packages/css/src/components/overlap/overlap.scss
+++ b/packages/css/src/components/overlap/overlap.scss
@@ -7,6 +7,6 @@
   display: grid;
 
   > * {
-    grid-area: 1 / -1;
+    grid-area: 1 / 1;
   }
 }
